correccion de palabra Preparados

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <section class="hero-section">
             <div class="container">
                 <div class="hero-content">
-                    <h1>Estamos <span>Prepardos</span> Para <span>Ayudarte <!--</span> Care <span>Help.</span>--></h1>
+                    <h1>Estamos <span>Preparados</span> Para <span>Ayudarte <!--</span> Care <span>Help.</span>--></h1>
                     <h5>Expertos en el cuidado de tu belleza ofreciendote los mejores servicios a nivel oriental para el cuidado de tu salud.</h5>
                     <a href="contact.html" class="theme-btn">Contactanos ahora</a>
                 </div>
