--- a/index.html
+++ b/index.html
@@ -62,15 +62,17 @@
                                     <ul class="navigation clearfix">
                                         <li class="current"><a href="index.html">Ginelaser</a></li>
                                         <li><a href="about.html">Acerca de</a></li>
-                                        <li><a href="services.html">Servicios</a></li>
-                                        <!--
-                                        <li class="dropdown"><a href="#">Pages</a>
+                                        #<li><a href="services.html">Servicios</a></li>#
+                                        
+                                        <li class="dropdown"><a href="#">tratamientos</a>
                                             <ul>
-                                                <li><a href="team.html">Team Member</a></li>
-                                                <li><a href="404.html">Error Page</a></li>
+                                                <li><a href="team.html">Laser dermatologicó</a></li>
+                                                <li><a href="404.html">Laser para manchar</a></li>
+                                                <li><a href="404.html">Laser para manchar</a></li>
+                                                <li><a href="404.html">Laser para manchar</a></li>
                                             </ul>
                                         </li>
-                                        -->
+                                    
                                         <li><a href="contact.html">Contacto</a></li>
                                     </ul>
                                 </div>
