--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     <ul class="navigation clearfix">
                                         <li class="current"><a href="index.html">Ginelaser</a></li>
                                         <li><a href="about.html">Acerca de</a></li>
-                                        #<li><a href="services.html">Servicios</a></li>#
+                                        <!--<li><a href="services.html">Servicios</a></li>-->
                                         
                                         <li class="dropdown"><a href="#">tratamientos</a>
                                             <ul>
