--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                         <li><a href="about.html">Acerca de</a></li>
                                         <!--<li><a href="services.html">Servicios</a></li>-->
                                         
-                                        <li class="dropdown"><a href="#">tratamientos</a>
+                                        <li class="dropdown"><a href="#">Tratamientos</a>
                                             <ul>
                                                 <li><a href="team.html">Laser dermatologicó</a></li>
                                                 <li><a href="404.html">Laser para manchar</a></li>
@@ -163,6 +163,36 @@
                 <div class="section-title text-center mb-95">
                     <h2>Nuestros Servicios</h2>
                     <p>Somos los pioneros a nivel Orienteal en el cuidado de la bella <br> utilizando tecnologia de ultimo momento para cada uno de nuestros tratamientos.</p>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item style-one">
+                            <i class="flaticon-eyepatch"></i>
+                            <h4><a href="services.html">Tensado Vaginal</a></h4>
+                            <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item style-two">
+                            <i class="flaticon-aesthetic"></i>
+                            <h4><a href="services.html">Blanqueamiento</a></h4>
+                            <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item style-three">
+                            <i class="flaticon-beauty"></i>
+                            <h4><a href="services.html">Depilación Láser</a></h4>
+                            <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item style-four">
+                            <i class="flaticon-ear"></i>
+                            <h4><a href="services.html">Relleno de punto G</a></h4>
+                            <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
