--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
                                         
                                         <li class="dropdown"><a href="#">Tratamientos</a>
                                             <ul>
-                                                <li><a href="team.html">Laser dermatologicó</a></li>
-                                                <li><a href="404.html">Laser para manchar</a></li>
-                                                <li><a href="404.html">Laser para manchar</a></li>
+                                                <li><a href="team.html">Depilación Laser</a></li>
+                                                <li><a href="404.html">Rejuvenecimiento Vaginal</a></li>
+                                                <li><a href="404.html">Laser para Cicatrices Estrias</a></li>
+                                                <li><a href="404.html">Blanquamientos</a></li>
                                                 <li><a href="404.html">Laser para manchar</a></li>
                                             </ul>
                                         </li>
