--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
                                                 <li><a href="404.html">Rejuvenecimiento Vaginal</a></li>
                                                 <li><a href="404.html">Laser para Cicatrices Estrias</a></li>
                                                 <li><a href="404.html">Blanquamientos</a></li>
-                                                <li><a href="404.html">Laser para manchar</a></li>
+                                                <li><a href="404.html">Ginecología estética</a></li>
+                                                <li><a href="404.html">Patología Ginecología</a></li>
+                                                <li><a href="404.html">Ginecologicos Esteticos Quirurgicos </a></li>
+                                                <li><a href="404.html">Aido Hialuronico </a></li>
                                             </ul>
                                         </li>
                                     
