--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                                                 <li><a href="404.html">Patología Ginecología</a></li>
                                                 <li><a href="404.html">Ginecologicos Esteticos Quirurgicos </a></li>
                                                 <li><a href="404.html">Aido Hialuronico </a></li>
+                                                <li><a href="404.html">Tratamientos Reductivos </a></li>
                                             </ul>
                                         </li>
                                     
