--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                                 <li><a href="team.html">Depilación Laser</a></li>
                                                 <li><a href="404.html">Rejuvenecimiento Vaginal</a></li>
                                                 <li><a href="404.html">Laser para Cicatrices Estrias</a></li>
-                                                <li><a href="404.html">Blanquamientos</a></li>
+                                                <li><a href="404.html">Manchas e Hiperpigmentación</a></li>
                                                 <li><a href="404.html">Ginecología estética</a></li>
                                                 <li><a href="404.html">Patología Ginecología</a></li>
                                                 <li><a href="404.html">Ginecologicos Esteticos Quirurgicos </a></li>
@@ -173,28 +173,28 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-one">
                             <i class="flaticon-eyepatch"></i>
-                            <h4><a href="services.html">Tensado Vaginal</a></h4>
+                            <h4><a href="services.html">Patología Ginecología</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-two">
                             <i class="flaticon-aesthetic"></i>
-                            <h4><a href="services.html">Blanqueamiento</a></h4>
+                            <h4><a href="services.html">Ginecologicos Esteticos Quirurgicos</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-three">
                             <i class="flaticon-beauty"></i>
-                            <h4><a href="services.html">Depilación Láser</a></h4>
+                            <h4><a href="services.html">Acído Hialuronico</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-four">
                             <i class="flaticon-ear"></i>
-                            <h4><a href="services.html">Relleno de punto G</a></h4>
+                            <h4><a href="services.html">Tratamientos Reductivos</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
@@ -203,28 +203,29 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-one">
                             <i class="flaticon-eyepatch"></i>
-                            <h4><a href="services.html">Tensado Vaginal</a></h4>
+                            <h4><a href="services.html">Depilación Laser</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item style-two">
-                            <i class="flaticon-aesthetic"></i>
-                            <h4><a href="services.html">Blanqueamiento</a></h4>
-                            <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
-                        </div>
-                    </div>
+                    
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-three">
                             <i class="flaticon-beauty"></i>
-                            <h4><a href="services.html">Depilación Láser</a></h4>
+                            <h4><a href="services.html">Laser para Cicatices y Estrias</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-four">
                             <i class="flaticon-ear"></i>
-                            <h4><a href="services.html">Relleno de punto G</a></h4>
+                            <h4><a href="services.html">Manchas e Hiperpigmentación</a></h4>
+                            <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item style-four">
+                            <i class="flaticon-ear"></i>
+                            <h4><a href="services.html">Rejuvenecimiento Vaginal</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
