quitando misión y vision del home

--- a/index.html
+++ b/index.html
@@ -139,16 +139,17 @@
                             <!--<h6>Saunas are used all over the world to improve health enjoy relax. During the clients stay in sauna, body is sweating and from harmful substances and toxins.</h6>-->
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique autem soluta nobis itaque exercitationem culpa hic tempora velit quo aspernatur, adipisci ipsum nam consectetur eveniet ratione officiis laboriosam quos nesciunt.</p>
                             <!--<p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>-->
-                            <div class="vision-mision">
-                                <div class="vm-image">
+                            <!--<div class="vision-mision">
+                               <div class="vm-image">
                                     <img src="assets/images/about/icon.png" alt="Icon">
                                 </div>
                                 <div class="vm-content">
                                     <h4>Nuestra Misión y Visión</h4>
                                     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis dolorem eveniet non fuga facere nesciunt soluta minima. Reiciendis ut tempora deserunt alias, praesentium eos, laborum, atque voluptatum quae nihil vitae.</P>
-                                    <!--<p>The pleasant temperature, similar to body temperature, extending beneath client’s body, frees the body negative tension caused by everyday stress.</p>-->
+                                    <p>The pleasant temperature, similar to body temperature, extending beneath client’s body, frees the body negative tension caused by everyday stress.</p>
                                 </div>
-                            </div>
+                            </div>-->
+
                             <a href="#" class="theme-btn style-two">Equipo de Expertos</a>
                         </div>
                     </div>
