quitando misión y vision del home

--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="mission vission-mission">
-                            <h3>Our Mission.</h3>
+                            <h3>Mision.</h3>
                             <h6>Saunas are used all over the world to improve health enjoy relax. During the clients stay in sauna, body is sweating and from harmful substances and toxins.</h6>
                             <p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>
                             <a href="services.html" class="theme-btn style-two mt-15">Our Services</a>
@@ -174,7 +174,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="vission vission-mission bg-three text-white">
-                            <h3>Our Vission.</h3>
+                            <h3>Vision.</h3>
                             <p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>
                             <p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>
                             <a href="team.html" class="theme-btn style-four mt-15">Our Experts</a>
