--- a/index.html
+++ b/index.html
@@ -148,9 +148,8 @@
                                     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis dolorem eveniet non fuga facere nesciunt soluta minima. Reiciendis ut tempora deserunt alias, praesentium eos, laborum, atque voluptatum quae nihil vitae.</P>
                                     <p>The pleasant temperature, similar to body temperature, extending beneath client’s body, frees the body negative tension caused by everyday stress.</p>
                                 </div>
-                            </div>-->
-
-                            <a href="#" class="theme-btn style-two">Equipo de Expertos</a>
+                            </div>
+                            <a href="#" class="theme-btn style-two">Equipo de Expertos</a> -->
                         </div>
                     </div>
                 </div>
