--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@
     <!-- Responsive Meta -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <title>Team | Gilkan - Dermatology and Skin Care HTML5 Template</title>
+    <title>|Ginelaser</title>
     <!-- Fav Icons -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
@@ -60,16 +60,27 @@
 
                                 <div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="services.html">Services</a></li>
-                                        <li class="dropdown current"><a href="#">Pages</a>
+                                        <li><a href="index.html">Ginelaser</a></li>
+                                        <li><a href="about.html">Acerca de</a></li>
+                                        <!--<li><a href="services.html">Servicios</a></li>-->
+                                        
+                                        <li class="dropdown current"><a href="#">Tratamientos</a>
                                             <ul>
-                                                <li><a href="team.html">Team Member</a></li>
-                                                <li><a href="404.html">Error Page</a></li>
+                                                <li><a href="team.html">Depilación Laser</a></li>
+                                                <li><a href="404.html">Rejuvenecimiento Vaginal</a></li>
+                                                <li><a href="404.html">Laser para Cicatrices Estrias</a></li>
+                                                <li><a href="404.html">Manchas e Hiperpigmentación</a></li>
+                                                <li><a href="404.html">Ginecología estética</a></li>
+                                                <li><a href="404.html">Patología Ginecología</a></li>
+                                                <li><a href="404.html">Ginecologicos Esteticos Quirurgicos </a></li>
+                                                <li><a href="404.html">Aido Hialuronico </a></li>
+                                                <li><a href="404.html">Tratamientos Reductivos </a></li>
+                                                <li><a href="404.html">Berrugas</a></li>
+                                                <li><a href="404.html">Metodos de Planificación</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                    
+                                        <li><a href="contact.html">Contacto</a></li>
                                     </ul>
                                 </div>
 
