--- a/about.html
+++ b/about.html
@@ -62,15 +62,22 @@
                                     <ul class="navigation clearfix">
                                         <li><a href="index.html">Ginelaser</a></li>
                                         <li class="current"><a href="about.html">Acerca de</a></li>
-                                        <li><a href="services.html">Servicios</a></li>
-                                        <!--
-                                        <li class="dropdown"><a href="#">Pages</a>
+                                        <!--<li><a href="services.html">Servicios</a></li>-->
+                                        
+                                        <li class="dropdown"><a href="#">Tratamientos</a>
                                             <ul>
-                                                <li><a href="team.html">Team Member</a></li>
-                                                <li><a href="404.html">Error Page</a></li>
+                                                <li><a href="team.html">Depilación Laser</a></li>
+                                                <li><a href="404.html">Rejuvenecimiento Vaginal</a></li>
+                                                <li><a href="404.html">Laser para Cicatrices Estrias</a></li>
+                                                <li><a href="404.html">Manchas e Hiperpigmentación</a></li>
+                                                <li><a href="404.html">Ginecología estética</a></li>
+                                                <li><a href="404.html">Patología Ginecología</a></li>
+                                                <li><a href="404.html">Ginecologicos Esteticos Quirurgicos </a></li>
+                                                <li><a href="404.html">Aido Hialuronico </a></li>
+                                                <li><a href="404.html">Tratamientos Reductivos </a></li>
                                             </ul>
                                         </li>
-                                        -->
+                                    
                                         <li><a href="contact.html">Contacto</a></li>
                                     </ul>
                                 </div>
