--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
                                                 <li><a href="404.html">Ginecologicos Esteticos Quirurgicos </a></li>
                                                 <li><a href="404.html">Aido Hialuronico </a></li>
                                                 <li><a href="404.html">Tratamientos Reductivos </a></li>
+                                                <li><a href="404.html">Berrugas</a></li>
+                                                <li><a href="404.html">Metodos de Planificación</a></li>
                                             </ul>
                                         </li>
                                     
