tercera fila de tratamientos

--- a/index.html
+++ b/index.html
@@ -232,6 +232,31 @@
                         </div>
                     </div>
                 </div>
+                <!--Tercera Fila-->
+                <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item style-one">
+                            <i class="flaticon-eyepatch"></i>
+                            <h4><a href="services.html">Depilación Laser</a></h4>
+                            <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
+                        </div>
+                    </div>
+                    
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item style-three">
+                            <i class="flaticon-beauty"></i>
+                            <h4><a href="services.html">Laser para Cicatices y Estrias</a></h4>
+                            <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item style-four">
+                            <i class="flaticon-ear"></i>
+                            <h4><a href="services.html">Manchas e Hiperpigmentación</a></h4>
+                            <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             
             <div class="service-angle">
