--- a/index.html
+++ b/index.html
@@ -66,17 +66,15 @@
                                         
                                         <li class="dropdown"><a href="#">Tratamientos</a>
                                             <ul>
-                                                <li><a href="team.html">Depilación Laser</a></li>
-                                                <li><a href="404.html">Rejuvenecimiento Vaginal</a></li>
-                                                <li><a href="404.html">Laser para Cicatrices Estrias</a></li>
+                                                <li><a href="team.html">Laser para Cicatrices Estrias</a></li>
                                                 <li><a href="404.html">Manchas e Hiperpigmentación</a></li>
-                                                <li><a href="404.html">Ginecología estética</a></li>
-                                                <li><a href="404.html">Patología Ginecología</a></li>
-                                                <li><a href="404.html">Ginecologicos Esteticos Quirurgicos </a></li>
-                                                <li><a href="404.html">Aido Hialuronico </a></li>
-                                                <li><a href="404.html">Tratamientos Reductivos </a></li>
-                                                <li><a href="404.html">Berrugas</a></li>
+                                                <li><a href="404.html">Tratamientos Reductivos</a></li>
+                                                <li><a href="404.html">Verrugas</a></li>
                                                 <li><a href="404.html">Metodos de Planificación</a></li>
+                                                <li><a href="404.html">Aido Hialuronico </a></li>
+                                                <li><a href="404.html">Patologías Ginecología</a></li>
+                                                <li><a href="404.html">Ginecología estética</a></li>
+                                                <li><a href="404.html">Ginecologicos Esteticos Quirurgicos</a></li>
                                             </ul>
                                         </li>
                                     
