--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <!-- Responsive Meta -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <title>Contact | Gilkan - Dermatology and Skin Care HTML5 Template</title>
+    <title>|Ginelaser</title>
     <!-- Fav Icons -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
@@ -66,17 +66,15 @@
                                         
                                         <li class="dropdown"><a href="#">Tratamientos</a>
                                             <ul>
-                                                <li><a href="team.html">Depilación Laser</a></li>
-                                                <li><a href="404.html">Rejuvenecimiento Vaginal</a></li>
-                                                <li><a href="404.html">Laser para Cicatrices Estrias</a></li>
+                                                <li><a href="team.html">Laser para Cicatrices Estrias</a></li>
                                                 <li><a href="404.html">Manchas e Hiperpigmentación</a></li>
-                                                <li><a href="404.html">Ginecología estética</a></li>
-                                                <li><a href="404.html">Patología Ginecología</a></li>
-                                                <li><a href="404.html">Ginecologicos Esteticos Quirurgicos </a></li>
-                                                <li><a href="404.html">Aido Hialuronico </a></li>
-                                                <li><a href="404.html">Tratamientos Reductivos </a></li>
-                                                <li><a href="404.html">Berrugas</a></li>
+                                                <li><a href="404.html">Tratamientos Reductivos</a></li>
+                                                <li><a href="404.html">Verrugas</a></li>
                                                 <li><a href="404.html">Metodos de Planificación</a></li>
+                                                <li><a href="404.html">Aido Hialuronico </a></li>
+                                                <li><a href="404.html">Patologías Ginecología</a></li>
+                                                <li><a href="404.html">Ginecología estética</a></li>
+                                                <li><a href="404.html">Ginecologicos Esteticos Quirurgicos</a></li>
                                             </ul>
                                         </li>
                                     
