--- a/team.html
+++ b/team.html
@@ -66,6 +66,7 @@
                                         
                                         <li class="dropdown current"><a href="#">Tratamientos</a>
                                             <ul>
+                                                <li><a href="team.html">Depilación Laser</a></li>
                                                 <li><a href="team.html">Laser para Cicatrices Estrias</a></li>
                                                 <li><a href="404.html">Manchas e Hiperpigmentación</a></li>
                                                 <li><a href="404.html">Tratamientos Reductivos</a></li>
