--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                                         
                                         <li class="dropdown"><a href="#">Tratamientos</a>
                                             <ul>
+                                                <li><a href="team.html">Depilación Laser</a></li>
                                                 <li><a href="team.html">Laser para Cicatrices Estrias</a></li>
                                                 <li><a href="404.html">Manchas e Hiperpigmentación</a></li>
                                                 <li><a href="404.html">Tratamientos Reductivos</a></li>
@@ -173,28 +174,28 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-one">
                             <i class="flaticon-eyepatch"></i>
-                            <h4><a href="services.html">Laser para Cicatrices Estrias</a></h4>
+                            <h4><a href="services.html">Depilación Laser</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-two">
                             <i class="flaticon-aesthetic"></i>
-                            <h4><a href="services.html">Manchas e Hiperpigmentación</a></h4>
+                            <h4><a href="services.html">Laser para Cicatrices Estrias</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-three">
                             <i class="flaticon-beauty"></i>
-                            <h4><a href="services.html">Tratamientos Reductivos</a></h4>
+                            <h4><a href="services.html">Manchas e Hiperpigmentación</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-four">
                             <i class="flaticon-ear"></i>
-                            <h4><a href="services.html">Verrugas</a></h4>
+                            <h4><a href="services.html">Tratamientos Reductivos</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
@@ -203,7 +204,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-one">
                             <i class="flaticon-eyepatch"></i>
-                            <h4><a href="services.html">Metodos de Planificación</a></h4>
+                            <h4><a href="services.html">Verrugas</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
@@ -211,6 +212,13 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-three">
                             <i class="flaticon-beauty"></i>
+                            <h4><a href="services.html">Metodos de Planificación</a></h4>
+                            <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item style-four">
+                            <i class="flaticon-ear"></i>
                             <h4><a href="services.html">Aido Hialuronico</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
@@ -218,14 +226,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-four">
                             <i class="flaticon-ear"></i>
-                            <h4><a href="services.html">Patologías Ginecologíca</a></h4>
-                            <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item style-four">
-                            <i class="flaticon-ear"></i>
-                            <h4><a href="services.html">Ginecología estética</a></h4>
+                            <h4><a href="services.html">Patologías Ginecología</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
@@ -235,7 +236,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-one">
                             <i class="flaticon-eyepatch"></i>
-                            <h4><a href="services.html">Ginecologicos Esteticos Quirurgicos</a></h4>
+                            <h4><a href="services.html">Ginecología estética</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
@@ -243,17 +244,18 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="service-item style-three">
                             <i class="flaticon-beauty"></i>
-                            <h4><a href="services.html">####</a></h4>
+                            <h4><a href="services.html">Ginecologicos Esteticos Quirurgicos</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <!--<div class="col-lg-3 col-md-6">
                         <div class="service-item style-four">
                             <i class="flaticon-ear"></i>
                             <h4><a href="services.html">######</a></h4>
                             <p>It has different attractions combined with sound, caribbian storm, aroma and various.</p>
                         </div>
-                    </div>
+                    </div>-->
+
                 </div>
             </div>
             
