MODIFicacion de precios servicios

--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
         <section class="pricing-section mb-120 rmb-70">
             <div class="container">
                 <div class="section-title text-center mb-95">
-                    <h2>Mejores Tratamiento y Precios <br> estan aquí con <span>Ginelaser</span></h2>
-                    <p>Realizar tus tratamientos con Ginesaler te da la garantía <br> de realizar tus procedimientos estetico o ginecologicos en manos de expertos de la salud.</p>
+                    <h2>NUESSTRAS PROMOCIONES <br>CON <span>GINELASER</span></h2>
+                    <!--<p>Realizar tus tratamientos con Ginesaler te da la garantía <br> de realizar tus procedimientos estetico o ginecologicos en manos de expertos de la salud.</p>-->
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-6">
@@ -306,17 +306,14 @@
                           </div>
                           <div class="pricing-content">
                               <div class="price-circle">
-                                  <p>Laser Ginecológico</p>
-                                  <h3>$150</h3>
+                                  <p>Depilasión Laser</p>
+                                  <h3>$39.99</h3>
                               </div>
                                <ul>
-                                    <li>Breast Augmentation</li>
-                                    <li>Mommy Makeover</li>
-                                    <li>Eyelid Surgery</li>
-                                    <li>Skin Care Treatments</li>
-                                    <li>Chin Augmentation</li>
+                                    <li>Axila | Bigote | Bikini | Pierna</li>
+
                                 </ul>
-                                <a href="#" class="theme-btn">Empieza Ahora</a>
+                                <a href="#" class="theme-btn">Agenda tu cita!</a>
                           </div>                       
                         </div>
                     </div>
@@ -327,17 +324,14 @@
                           </div>
                           <div class="pricing-content">
                               <div class="price-circle">
-                                  <p>Ácido Hialurónico</p>
-                                  <h3>$180</h3>
+                                  <p>Depilación</p>
+                                  <h3>$19.99</h3>
                               </div>
                                <ul>
-                                    <li>Breast Augmentation</li>
-                                    <li>Mommy Makeover</li>
-                                    <li>Eyelid Surgery</li>
-                                    <li>Skin Care Treatments</li>
-                                    <li>Chin Augmentation</li>
+                                    <li>Barba + Bigote</li>
+                                   
                                 </ul>
-                                <a href="#" class="theme-btn">Empieza Ahora</a>
+                                <a href="#" class="theme-btn">Agenda tu cita!</a>
                           </div>
                         </div>
                     </div>
@@ -348,17 +342,13 @@
                           </div>
                           <div class="pricing-content">
                               <div class="price-circle">
-                                  <p>Depilación Láser</p>
-                                  <h3>$260</h3>
+                                  <p>Depilación</p>
+                                  <h3>$14.00</h3>
                               </div>
                                <ul>
-                                    <li>Breast Augmentation</li>
-                                    <li>Mommy Makeover</li>
-                                    <li>Eyelid Surgery</li>
-                                    <li>Skin Care Treatments</li>
-                                    <li>Chin Augmentation</li>
+                                    <li>Axilas + Bikini</li>
                                 </ul>
-                                <a href="#" class="theme-btn">Empieza Ahora</a>
+                                <a href="#" class="theme-btn">Agenda tu cita!</a>
                           </div>
                         </div>
                     </div>
