MODIFicacion de precios servicios

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                                   <h3>$39.99</h3>
                               </div>
                                <ul>
-                                    <li>Axila | Bigote | Bikini | Pierna</li>
+                                    <li>Axila <br> Bigote <br> Bikini <br> Pierna</li>
 
                                 </ul>
                                 <a href="#" class="theme-btn">Agenda tu cita!</a>
@@ -343,7 +343,7 @@
                           <div class="pricing-content">
                               <div class="price-circle">
                                   <p>Depilación</p>
-                                  <h3>$14.00</h3>
+                                  <h3>$14.99</h3>
                               </div>
                                <ul>
                                     <li>Axilas + Bikini</li>
