agregando los servicios

--- a/about.html
+++ b/about.html
@@ -73,16 +73,16 @@
                                         
                                         <li class="dropdown"><a href="#">Tratamientos</a>
                                             <ul>
-                                                <li><a href="team.html">Depilación Laser</a></li>
-                                                <li><a href="team.html">Laser para Cicatrices Estrias</a></li>
-                                                <li><a href="404.html">Manchas e Hiperpigmentación</a></li>
-                                                <li><a href="404.html">Tratamientos Reductivos</a></li>
-                                                <li><a href="404.html">Verrugas</a></li>
-                                                <li><a href="404.html">Metodos de Planificación</a></li>
-                                                <li><a href="404.html">Aido Hialuronico </a></li>
-                                                <li><a href="404.html">Patologías Ginecología</a></li>
-                                                <li><a href="404.html">Ginecología estética</a></li>
-                                                <li><a href="404.html">Ginecologicos Esteticos Quirurgicos</a></li>
+                                                <li><a href="depilacionlaser.html">Depilación Laser</a></li>
+                                                <li><a href="laserestriascicatriz.html">Laser para estrías y cicatriz</a></li>
+                                                <li><a href="manchasehiperpigmentacion.html">Manchas e Hiperpigmentación</a></li>
+                                                <li><a href="tratamientosreductivos.html">Tratamientos Reductivos</a></li>
+                                                <li><a href="verrugas.html">Verrugas</a></li>
+                                                <li><a href="metodosdeplanificacion.html">Metodos de Planificación</a></li>
+                                                <li><a href="acidohialuronico.html">Aido Hialuronico </a></li>
+                                                <li><a href="lasertractogenital.html">Laser en tracto genital</a></li>
+                                                <li><a href="tratamientosginecologicoesteticos.html">Ginecología estética</a></li>
+                                                <li><a href="ginecologicosesteticosquirurgicos.html">Ginecologicos Esteticos Quirurgicos</a></li>
                                             </ul>
                                         </li>
                                     
