--- a/services.html
+++ b/services.html
@@ -60,17 +60,25 @@
 
                                 <div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
-                                        <li><a href="index.html">Ginelaser</a></li>
+                                        <li class="current"><a href="index.html">Ginelaser</a></li>
                                         <li><a href="about.html">Acerca de</a></li>
-                                        <li class="current"><a href="services.html">Servicios</a></li>
-                                        <!--
-                                        <li class="dropdown"><a href="#">Pages</a>
+                                        <!--<li><a href="services.html">Servicios</a></li>-->
+                                        
+                                        <li class="dropdown"><a href="#">Tratamientos</a>
                                             <ul>
-                                                <li><a href="team.html">Team Member</a></li>
-                                                <li><a href="404.html">Error Page</a></li>
+                                                <li><a href="depilacionlaser.html">Depilación Laser</a></li>
+                                                <li><a href="laserestriascicatriz.html">Laser para estrías y cicatriz</a></li>
+                                                <li><a href="manchasehiperpigmentacion.html">Manchas e Hiperpigmentación</a></li>
+                                                <li><a href="tratamientosreductivos.html">Tratamientos Reductivos</a></li>
+                                                <li><a href="verrugas.html">Verrugas</a></li>
+                                                <li><a href="metodosdeplanificacion.html">Metodos de Planificación</a></li>
+                                                <li><a href="acidohialuronico.html">Aido Hialuronico </a></li>
+                                                <li><a href="lasertractogenital.html">Laser en tracto genital</a></li>
+                                                <li><a href="tratamientosginecologicoesteticos.html">Ginecología estética</a></li>
+                                                <li><a href="ginecologicosesteticosquirurgicos.html">Ginecologicos Esteticos Quirurgicos</a></li>
                                             </ul>
                                         </li>
-                                        -->
+                                    
                                         <li><a href="contact.html">Contacto</a></li>
                                     </ul>
                                 </div>
