--- a/verrugas.html
+++ b/verrugas.html
@@ -159,27 +159,27 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="widget about-widget mr-30 rmr-0">
-                                    <h4 class="footer-title">About Us.</h4>
+                                    <h4 class="footer-title">Sobre Nosotros.</h4>
                                     <div class="about-widget-content">
-                                        <p>The pleasant temperature, similar body temperature, extending beneath client’s body, frees the body negative tension caused by everyday stress.</p>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident ratione iure eveniet quod vel itaque quos blanditiis accusamus aut! Accusamus obcaecati corrupti tenetur tempore cumque! Cum dolores adipisci ad.</p>
                                         <div class="about-widget-contact mt-25">
-                                            <p>176 W street name, <br>New York, NY 10014</p>
-                                            <h4><a href="callto:+00568468349">+00 568 468 349</a></h4>
+                                            <p>La fontana, Residencial los Almendros, #15 <br> San Miguel, El Salvador</p>
+                                            <h4><a href="callto:+00568468349">+503 7199 3626</a></h4>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="widget services-widget">
-                                    <h4 class="footer-title">Our Services.</h4>
+                                    <h4 class="footer-title">Nuestros Servicios.</h4>
                                     <ul class="list-style-one">
-                                        <li><a href="#">Breast Augmentation</a></li>
-                                        <li><a href="#">Mommy Makeover</a></li>
-                                        <li><a href="#">Eyelid Surgery</a></li>
-                                        <li><a href="#">Skin Care Treatments</a></li>
-                                        <li><a href="#">Useful Links</a></li>
-                                        <li><a href="#">Free Consultation</a></li>
-                                        <li><a href="#">Customer Support</a></li>
+                                        <li><a href="#">Tensado Vaginal</a></li>
+                                        <li><a href="#">Blanquamiento</a></li>
+                                        <li><a href="#">Mejoria de cicatriz y estrias</a></li>
+                                        <li><a href="#">Relleno de punto G</a></li>
+                                        <li><a href="#">Depilación Axilas</a></li>
+                                        <li><a href="#">Depilación Barba</a></li>
+                                        <li><a href="#">Depilación Piernas</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -187,12 +187,12 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="widget subscribe-widget">
-                            <h4 class="footer-title">Subscribe Now.</h4>
+                            <h4 class="footer-title">Suscribete boletin informativo.</h4>
                             <form action="#">
-                                <input type="email" placeholder="Your email here" required>
+                                <input type="email" placeholder="Escrite tu email aquí" required>
                                 <div class="btn-and-text">
                                     <button type="submit"><i class="flaticon-right-arrow-1"></i></button>
-                                    <p>Receive weekly tips & tricks on beauty.</p>
+                                    <p>Recibe información de promociones.</p>
                                 </div>
                             </form>
                         </div>
@@ -204,7 +204,7 @@
             <div class="copyright mt-100 rmt-50">
                 <div class="container">
                     <div class="copyright-inner">
-                        <p>Copyright@2020 Gilkan. All rights reserved</p>
+                        <p>Copyright@2023 Ginelaser. Derechos Reservados</p>
                         <!-- Scroll Top Button -->
                         <button class="scroll-top scroll-to-target" data-target="html"><span class="flaticon-up-arrow"></span></button>
                     </div>
