--- a/verrugas.html
+++ b/verrugas.html
@@ -161,7 +161,7 @@
                                 <div class="widget about-widget mr-30 rmr-0">
                                     <h4 class="footer-title">Sobre Nosotros.</h4>
                                     <div class="about-widget-content">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident ratione iure eveniet quod vel itaque quos blanditiis accusamus aut! Accusamus obcaecati corrupti tenetur tempore cumque! Cum dolores adipisci ad.</p>
+                                        <p>Lorem ipsum dolasor sit amet consectetur adipisicing elit. Ipsa provident ratione iure eveniet quod vel itaque quos blanditiis accusamus aut! Accusamus obcaecati corrupti tenetur tempore cumque! Cum dolores adipisci ad.</p>
                                         <div class="about-widget-contact mt-25">
                                             <p>La fontana, Residencial los Almendros, #15 <br> San Miguel, El Salvador</p>
                                             <h4><a href="callto:+00568468349">+503 7199 3626</a></h4>
